--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
       </nav>
   <!-- =============== navbar end ============ -->
     <div class="main">
-        <div class="item item1">
+        <!-- <div class="item item1">
             <h1>photography</h1>
             <div class="social_icon">
                 <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                 <a href="#"><i class="fa-brands fa-twitter"></i></a>
                 <a href="#"><i class="fa-brands fa-instagram"></i></i></a>
             </div>
-        </div>
+        </div> -->
         <div class="item item2">
             <h1>photography</h1>
             <div class="social_icon">
@@ -75,14 +75,14 @@
                 <a href="#"><i class="fa-brands fa-instagram"></i></i></a>
             </div>
         </div>
-        <div class="item item5">
+        <!-- <div class="item item5">
             <h1>photography</h1>
             <div class="social_icon">
                 <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                 <a href="#"><i class="fa-brands fa-twitter"></i></a>
                 <a href="#"><i class="fa-brands fa-instagram"></i></i></a>
             </div>
-        </div>
+        </div> -->
         <div class="item item6">
             <h1>photography</h1>
             <div class="social_icon">
